# Hades

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.MD  README-zh_CN.md  README.md  agent-id  hids.go
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: co-re.yaml  non-co-re-daily.yaml  non-co-re.yaml  release-agent.yaml  release-collector.yaml  release-driver.yaml
SDK/: README.md  go.mod  go.sum  sandbox.go  sdk.go  transfer.proto
SDK/clock/: clock.go  clock_test.go
SDK/config/: config.go
SDK/go/: README.md  go.mod  go.sum  sandbox.go  sdk.go
SDK/logger/: logger.go  remote_logger.go
SDK/rust/: Cargo.toml  README.md  build.rs
SDK/rust/src/: hash.rs  lib.rs  logger.rs  transfer.rs
SDK/transport/: README.md  client.go  client_linux.go  client_windows.go  transfer.pb.go  transfer.proto  transport.go
SDK/util/: decompress.go  download.go
agent/: Makefile  agent.go  example.json  go.mod  go.sum  hadesAgent.go  hids.go  main.go
agent/agent/: agent.go  agent_linux.go  agent_windows.go  default.go  host.go  id.go  state.go  update.go
agent/basis/: agent.go  basis.go
agent/collector/: Makefile  bash_history.go  cn_proc.go  collector.go  cron.go  ebpf.go  go.mod  go.sum  hash.go  kprobeexample_bpfeb.go  kprobeexample_bpfel.go  main.go  process.go  socket.go  sshd.go  sshdconfig.go
agent/config/: config.go  download.go  iConfig.go  linux.go  whitelist.go  windows.go
agent/connector/: cn_proc_handler.go  socket_handler.go
agent/core/: transmission.go
agent/deploy/: Makefile  README.md  build.sh  hades-agent.service  nfpm.yaml
agent/docs/: DOCS.MD  docs.md  ebpf.md
agent/global/: base.go  caches.go  global.go  grpc.pb.go
agent/heartbeat/: agent.go  heartbeat.go  plugin.go  resource.go
agent/host/: host.go
agent/internal/: type.go
agent/log/: log.go
agent/metrics/: metric_agent.go  metric_host.go  metric_net.go  metric_plugin.go  metrics.go  resource.go
docs/: docs.md
internal/: iretry.go
plugins/edriver-rust/: Cargo.toml  Makefile  README.md  build.rs
plugins/edriver-rust/.cargo/: config.toml
plugins/edriver-rust/src/: bpfmgr.rs  lib.rs  main.rs
plugins/edriver-rust/src/bpf/: Makefile  hades.bpf.c  hades.skel.rs  mod.rs
plugins/edriver-rust/src/bpf/common/: common.h  consts.h  edriver.h  maps.h  print.h  types.h
plugins/edriver-rust/src/bpf/include/: hades_rootkit.h
plugins/edriver-rust/src/cache/: argv.rs  hash.rs  mod.rs  ns.rs  user.rs
plugins/edriver-rust/src/events/: execve.rs  mod.rs  rasp_java.rs
plugins/edriver-rust/src/process/: maps.rs  mod.rs  process.rs
plugins/edriver-rust/tests/: process_test.rs
plugins/eguard/: Cargo.toml  Makefile  README.md  build.rs  config.yaml
plugins/eguard/pkg/sumdb/sum.golang.org/: latest
plugins/eguard/src/: main.rs
plugins/eguard/src/bpf/: egress.h  eguard.bpf.c  eguard.skel.rs  general.h  mod.rs  tc.h  xdp.h
plugins/eguard/src/bpf/common/: general.h
plugins/eguard/src/bpf/events/: dns.h  tc.h  xdp.h
plugins/eguard/src/bpf/rules/: acl.h  l4_acl.h  l7_acl.h
plugins/eguard/src/config/: config.rs  ip_config.rs  mod.rs
plugins/eguard/src/config/parser/: dns.rs  mod.rs  tc.rs
plugins/eguard/src/event/: dns.rs  egress.rs  event.rs  ip_address.rs  mod.rs  tc.rs  xdp.rs
plugins/eguard/src/manager/: manager.rs
server/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
(+1186 files in other folders)
