[package]
name = "edrivers"
version = "0.1.0"
edition = "2021"
authors = ["chriskali <chriskalix@protonmail.com>"]
description = "Rust version of hades edriver"

[features]
debug = ["sdk/debug"]
static = ["libbpf-rs/static"]

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
libc = "0.2.0"
lru = "0.12.2"
governor = "0.6.0"
libbpf-rs = {version = "0.22.1", features=["static"]}
libbpf-sys = { version = "1.2.1" }
sdk = { path = "../../SDK/rust" }

[build-dependencies]
libbpf-cargo = "0.22.1"