[package]
name = "edriver"
version = "0.2.0"
edition = "2021"
authors = ["chriskali <chriskalix@protonmail.com>"]
description = "Rust version of hades edriver"

[features]
debug = ["sdk/debug"]
static = ["libbpf-rs/static"]

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
libc = "0.2.0"
lru = "0.12.2"
users = "0.11.0"
governor = "0.6.0"
lazy_static = "1.4.0"
twox-hash = "1.6"
hex = "0.4"
libbpf-rs = {version = "0.23.3", features = ["static"]}
libbpf-sys = { version = "1.4.3" }
bitflags = "1.2.1"
sdk = { path = "../../SDK/rust" }

[build-dependencies]
libbpf-cargo = "0.23.3"
