[package]
name = "eguard"
version = "0.1.0"
authors = ["chriskali <chriskalix@protonmail.com>"]
edition = "2021"

[features]
debug = ["sdk/debug"]
static = ["libbpf-rs/static"]

[dependencies]
anyhow = "1.0"
libbpf-rs = {version = "0.21.2", features=["static"]}
libc = "0.2.0"
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
nix = { version = "0.26", default-features = false, features = ["net", "user"] }
ctrlc = "3.2"
crossbeam = "0.8"
byteorder = "1.4"
zerocopy = { version = "0.6.1", features = ["simd"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8.23"
serde_json = "1.0"
log = { version = "0.4", features = ["std"] }
lazy_static = "1.4.0"
coarsetime = "0.1.23"
pnet = "0.27"
#plugins
sdk = { path = "../../SDK/rust" }

[build-dependencies]
libbpf-cargo = "0.21.2"
